--- a/src/historia.html
+++ b/src/historia.html
@@ -28,9 +28,8 @@
     <header class="primary-header">
       <h1 class="primary-header__title">
         <a class="colored-background-link" href="index.html#top"
-          >Parc Natural de la Zona Volcànica de la Garrotxa<span
-            class="fa-solid fa-volcano"
-          ></span
+          >Parc Natural de la Zona Volcànica de la Garrotxa
+          <span class="fa-solid fa-volcano"> </span
         ></a>
       </h1>
       <nav>
@@ -150,6 +149,7 @@
             investigació es va publicar en la tesi doctoral de Stefania Bartlini
             <cite
               ><a
+                class="text-link"
                 href="https://ca.wikipedia.org/wiki/Zona_Volc%C3%A0nica_de_la_Garrotxa#cite_note-:0-5"
                 >Volcanic hazard assessment in monogenetic volcanic fields</a
               ></cite
@@ -200,7 +200,7 @@
             class="colored-background-link"
             >Turisme Garrotxa
             <i class="fa-solid fa-arrow-up-right-from-square"></i></a
-          >. Consultes realitzades el 29 i 30 de març de 2023.
+          >. Consultes realitzades el 24 i 25 d'abril de 2023.
         </p>
         <p>
           Elaborat per Oriol Esquena Calm per a la PAC1 de l'assignatura Eines
