afegir llista volcans + galeria imatges

--- a/src/historia.html
+++ b/src/historia.html
@@ -27,7 +27,7 @@
   <body>
     <header class="primary-header">
       <h1 class="primary-header__title">
-        <a class="colored-background-link" href="index.html#top"
+        <a class="colored-background-link" href="index.html"
           >Parc Natural de la Zona Volcànica de la Garrotxa
           <span class="fa-solid fa-volcano"> </span
         ></a>
@@ -40,10 +40,8 @@
             >
           </li>
           <li>
-            <a
-              class="colored-background-link"
-              href="index.html#explotacio-i-creacio-pnzvg"
-              >Volcans famosos</a
+            <a class="colored-background-link" href="volcans.html"
+              >Volcans i llocs d'interès</a
             >
           </li>
           <li>
@@ -171,13 +169,14 @@
             allowfullscreen
           ></iframe>
           <figcaption class="img-figures__captions">
-            Imatge del volcà Santa Margarida des de l'aire | Imatge de:
+            Vídeo explicatiu de si els volcans de la Garrotxa podrien erupcionar
+            | Vídeo de:
             <a
               class="text-link"
-              href="https://es.turismegarrotxa.com/27-lugares-de-interes-de-la-garrotxa/volcan-santa-margarida/"
-              title="Reserva Natural del Volcà de Santa Margarida"
+              href="https://www.elnacional.cat/ca/societat/entrar-erupcio-volcans-garrotxa-la-palma-volca_647585_102.html?fbclid=IwAR2XMB5QkYjxg9xkG3R2hw9GNbi09Sg7pDEu2MNV9KpAD5xv2HY82FzbBJg"
+              title="Poden erupcionar els volcans de la Garrotxa?"
               target="_blank"
-              >Turisme Garrotxa</a
+              >El Nacional.cat</a
             >
           </figcaption>
         </figure>
@@ -188,14 +187,14 @@
         <p>
           Informació extreta de la
           <a
-            href="https://ca.wikipedia.org/wiki/Volc%C3%A0_del_Croscat"
+            href="https://ca.wikipedia.org/wiki/Zona_Volc%C3%A0nica_de_la_Garrotxa"
             target="_blank"
             class="colored-background-link"
             >Viquipèdia <i class="fa-solid fa-arrow-up-right-from-square"></i
           ></a>
           i la pàgina de
           <a
-            href="https://ca.turismegarrotxa.com/itineraris-i-rutes/grederes-del-volca-del-croscat-itinerari-15-parc-natural-196/"
+            href="https://ca.turismegarrotxa.com/territori-i-natura/parc-natural-i-espais-protegits/parc-natural-de-la-zona-volcanica-de-la-garrotxa/"
             target="_blank"
             class="colored-background-link"
             >Turisme Garrotxa
@@ -204,8 +203,8 @@
         </p>
         <p>
           Elaborat per Oriol Esquena Calm per a la PAC1 de l'assignatura Eines
-          HTML i CSS II del màster de Desenvolupament de Llocs i Aplicacions Web
-          de la Universitat Oberta de Catalunya.
+          HTML i CSS del màster de Desenvolupament de Llocs i Aplicacions Web de
+          la Universitat Oberta de Catalunya.
         </p>
       </div>
     </footer>
