--- a/src/sta-margarida.html
+++ b/src/sta-margarida.html
@@ -22,7 +22,7 @@
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
     </style>
-    <title>Parc Natural de la Zona Volcànica de la Garrotxa</title>
+    <title>Volcà Santa Margarida</title>
   </head>
   <body>
     <header class="primary-header">
@@ -41,7 +41,7 @@
           </li>
           <li>
             <a class="colored-background-link" href="volcans.html"
-              >Volcans i llocs d'interès</a
+              ><strong>Volcans i llocs d'interès</strong></a
             >
           </li>
           <li>
@@ -58,54 +58,37 @@
       <article>
         <header class="secondary-header">
           <h2 class="secondary-header__title">
-            <span class="fa-solid fa-landmark"></span>
+            <span class="fa-solid fa-clock-rotate-left"></span>
             Introducció
           </h2>
         </header>
         <section>
           <p>
-            El Parc Natural de la Zona Volcànica de la Garrotxa és un parc
-            natural que es troba a la comarca de la Garrotxa i protegeix gran
-            part de la zona volcànica de la Garrotxa, el millor exponent de
-            paisatge volcànic de la península Ibèrica. Abans de ser declarat
-            parc natural el 1985, es va protegir com a Paratge Natural d'Interès
-            Nacional durant la primera legislatura de la Catalunya autonòmica.
+            En aquesta pàgina trobem els 5 volcans, o zones volcàniques, més
+            importants de la Garrotxa, destacant el que sempre ha estat evident:
+            aquesta és una terra de bellesa àrida i incapaç de deixar-nos
+            indiferents.
           </p>
-          <p>
-            El parc consta d'una quarantena de cons volcànics d'una edat
-            compresa entre els 10.000 i els 700.000 anys, 10 cràters, 23 cons
-            ben conservats i més de 20 colades de laves basàltiques.
-            L'orografia, el sòl i el clima proporcionen una variada vegetació,
-            sovint exuberant, amb alzinars, rouredes i fagedes d'excepcional
-            valor paisatgístic. Té un clima molt humit, i per algun tipus de
-            vegetació es podria representar com a clima atlàntic. El tipus
-            d'arbre que més abunda és l'alzinar muntanyenc.
-          </p>
-          <p>
-            Té una superfície protegida de 15.000 ha, que inclou 11 municipis,
-            28 reserves naturals, i pretén fer compatible la conservació amb el
-            desenvolupament econòmic, en règim de protecció arran dels impactes
-            de les extraccions mineres, el creixement urbanístic i els abocadors
-            incontrolats de residus.
-          </p>
+          <ul>
+            <il>
+              <a class="text-link" href="sta-margarida.html"
+                >Volcà de Santa Margarida</a
+              >
+            </il>
+            <il>
+              <a class="text-link" href="">Castellfollit de la Roca</a>
+            </il>
+            <il>
+              <a class="text-link" href="">Volcà Croscat</a>
+            </il>
+            <il>
+              <a class="text-link" href="">Volcà Montsacopa</a>
+            </il>
+            <il>
+              <a class="text-link" href="">Santa Pau</a>
+            </il>
+          </ul>
         </section>
-        <figure class="img-figures">
-          <img
-            src="https://es.turismegarrotxa.com/img-apartat-3200-1800/volca-santa-margarida-1-1920_001.jpg"
-            alt="Volcà Santa Margarida"
-            class="img-figures__image"
-          />
-          <figcaption class="img-figures__captions">
-            Imatge del volcà Santa Margarida des de l'aire | Imatge de:
-            <a
-              class="text-link"
-              href="https://es.turismegarrotxa.com/27-lugares-de-interes-de-la-garrotxa/volcan-santa-margarida/"
-              title="Reserva Natural del Volcà de Santa Margarida"
-              target="_blank"
-              >Turisme Garrotxa</a
-            >
-          </figcaption>
-        </figure>
       </article>
     </main>
     <footer class="footer">
@@ -113,7 +96,7 @@
         <p>
           Informació extreta de la
           <a
-            href="https://ca.wikipedia.org/wiki/Parc_Natural_de_la_Zona_Volc%C3%A0nica_de_la_Garrotxa"
+            href="https://ca.wikipedia.org/wiki/Zona_Volc%C3%A0nica_de_la_Garrotxa"
             target="_blank"
             class="colored-background-link"
             >Viquipèdia <i class="fa-solid fa-arrow-up-right-from-square"></i
