afegir pàgines detall

--- a/src/historia.html
+++ b/src/historia.html
@@ -45,11 +45,7 @@
             >
           </li>
           <li>
-            <a
-              class="colored-background-link"
-              href="index.html#interes-turistic"
-              >Interès turístic</a
-            >
+            <a class="colored-background-link" href="links.html">Enllaços</a>
           </li>
         </ul>
       </nav>
@@ -168,7 +164,7 @@
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             allowfullscreen
           ></iframe>
-          <figcaption class="img-figures__captions">
+          <figcaption class="vid-figures__caption">
             Vídeo explicatiu de si els volcans de la Garrotxa podrien erupcionar
             | Vídeo de:
             <a
