--- a/src/index.html
+++ b/src/index.html
@@ -45,11 +45,7 @@
             >
           </li>
           <li>
-            <a
-              class="colored-background-link"
-              href="index.html#interes-turistic"
-              >Interès turístic</a
-            >
+            <a class="colored-background-link" href="links.html">Enllaços</a>
           </li>
         </ul>
       </nav>
