--- a/src/sta-margarida.html
+++ b/src/sta-margarida.html
@@ -45,50 +45,157 @@
             >
           </li>
           <li>
-            <a
-              class="colored-background-link"
-              href="index.html#interes-turistic"
-              >Interès turístic</a
-            >
+            <a class="colored-background-link" href="links.html">Enllaços</a>
           </li>
         </ul>
       </nav>
     </header>
     <main class="main">
+      <div>
+        <h3 class="secondary-header__title">
+          <span class="fa-solid fa-star"></span>
+          Llista de llocs d'interès
+        </h3>
+        <ul class="categoria-volcans">
+          <li>
+            <a class="text-link" href="sta-margarida.html"
+              ><strong>Volcà de Santa Margarida</strong></a
+            >
+          </li>
+          <li>
+            <a class="text-link" href="castellfollit.html"
+              >Castellfollit de la Roca</a
+            >
+          </li>
+          <li>
+            <a class="text-link" href="">Volcà Croscat</a>
+          </li>
+          <li>
+            <a class="text-link" href="">Volcà Montsacopa</a>
+          </li>
+          <li>
+            <a class="text-link" href="">La Fageda d'en Jordà</a>
+          </li>
+        </ul>
+      </div>
       <article>
         <header class="secondary-header">
           <h2 class="secondary-header__title">
-            <span class="fa-solid fa-clock-rotate-left"></span>
-            Introducció
+            <span class="fa-solid fa-volcano"></span>
+            Volcà de Santa Margarida
           </h2>
         </header>
         <section>
-          <p>
-            En aquesta pàgina trobem els 5 volcans, o zones volcàniques, més
-            importants de la Garrotxa, destacant el que sempre ha estat evident:
-            aquesta és una terra de bellesa àrida i incapaç de deixar-nos
-            indiferents.
-          </p>
-          <ul>
-            <il>
-              <a class="text-link" href="sta-margarida.html"
-                >Volcà de Santa Margarida</a
+          <figure class="img-figures">
+            <img
+              src="https://ca.turismegarrotxa.com/img-apartat-3200-1800/22-volca-santa-margarida-1920_001.jpg"
+              alt="Volcà Santa Margarida"
+              class="img-figures__image"
+            />
+            <figcaption class="img-figures__captions">
+              Imatge del volcà Santa Margarida des de l'aire | Imatge de:
+              <a
+                class="text-link"
+                href="https://es.turismegarrotxa.com/27-lugares-de-interes-de-la-garrotxa/volcan-santa-margarida/"
+                title="Reserva Natural del Volcà de Santa Margarida"
+                target="_blank"
+                >Turisme Garrotxa</a
               >
-            </il>
-            <il>
-              <a class="text-link" href="">Castellfollit de la Roca</a>
-            </il>
-            <il>
-              <a class="text-link" href="">Volcà Croscat</a>
-            </il>
-            <il>
-              <a class="text-link" href="">Volcà Montsacopa</a>
-            </il>
-            <il>
-              <a class="text-link" href="">Santa Pau</a>
-            </il>
-          </ul>
+            </figcaption>
+          </figure>
+          <p>
+            El volcà de Santa Margarida és un volcà apagat de 766m d'altitud
+            situat a la regió volcànica d'Olot. Està situat al pla de la Cot, a
+            l'oest del municipi de Santa Pau (Garrotxa), i forma part del Parc
+            Natural de la Zona Volcànica de la Garrotxa.
+          </p>
+          <p>
+            És un dels edificis volcànics més importants del sector i la seva
+            extensa boca té uns 2.000m. de perímetre. Al mig del pla format pel
+            cràter hi ha l'ermita de Santa Margarida de Sacot, d'origen romànic,
+            que dona nom al volcà. El cràter té un diàmetre que s'acosta als
+            350m i una fondària de 79m. És un dels cràters que més conserva la
+            típica morfologia circular i el seu con està envoltat per una àrea
+            boscosa. Va entrar en erupció ara fa uns 11.000 anys.
+          </p>
+          <p>
+            El 6 de juliol de 2018 la Diputació de Girona i la Generalitat van
+            comprar la finca de 12 hectàrees que el conté i en cediren la gestió
+            al Parc Natural de la Zona Volcànica de la Garrotxa.
+          </p>
         </section>
+      </article>
+      <article id="geologia">
+        <header class="secondary-header">
+          <h3 class="secondary-header__title">
+            <span class="fa-solid fa-hill-rockslide"></span>
+            Geologia
+          </h3>
+        </header>
+        <section>
+          <p>
+            El volcà de Santa Margarida és un edifici volcànic de tipus
+            freatomagmàtic que es recolza en els gresos eocènics. El con no està
+            format totalment per materials volcànics, sinó que en el seu vorell
+            intern meridional afloren les roques prevolcàniques a causa de
+            l'encastament del cràter per sota del substrat.
+          </p>
+          <p>
+            D'acord amb la cartografia dels materials volcànics d'aquest sector,
+            s'ha comprovat que no tots els dipòsits que es troben en els
+            afloraments provenen del volcà de Santa Margarida.
+          </p>
+          <p>
+            Els nivells basals corresponen a onades piroclàstiques expulsades
+            durant la fase freatomagmàtica del volcà que tenen una dispersió
+            predominant cap a l'est i es van formar com a conseqüència de la
+            interacció del magma amb l'aigua de l'aqüífer de la formació
+            geològica de Bellmunt (Fm Bellmunt) (eocè). La capa intermèdia també
+            va ser originada pel volcà, però la violència de l'erupció en
+            aquesta etapa va ser menys important. Es va formar un dipòsit de
+            caiguda, gairebé estrombolià, encara que la presència d'alguns
+            fragments lítics indica una activitat freatomagmàtica lleu. La
+            dispersió d'aquests materials és radial des del centre eruptiu.
+          </p>
+          <p>
+            Les escòries de la part superior corresponen a un dipòsit de caiguda
+            estrombolià que no procedeix d'aquest centre eruptiu sinó del volcà
+            del Croscat localitzat un quilòmetre al nord-oest. L'absència d'un
+            paleosòl que separi aquests materials dels anteriors, permet deduir
+            que les erupcions d'aquests dos volcans van ser gairebé simultànies.
+          </p>
+        </section>
+      </article>
+      <article id="imatges-aeries">
+        <header class="secondary-header">
+          <h3 class="secondary-header__title">
+            <span class="fa-solid fa-photo-film"></span>
+            Imatges aèries
+          </h3>
+        </header>
+        <figure class="vid-figures">
+          <iframe
+            class="vid-figures__vid"
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/B0VRPUcr3-w?start=5&mute=1"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen
+          ></iframe>
+          <figcaption class="vid-figures__caption">
+            Vídeo del Volcà Santa Margarida des de l'aire | Vídeo del canal de
+            YouTube:
+            <a
+              class="text-link"
+              href="https://www.youtube.com/@pmi94"
+              title="Canal YouTube N47"
+              target="_blank"
+              >N47</a
+            >
+          </figcaption>
+        </figure>
       </article>
     </main>
     <footer class="footer">
