--- a/src/volcans.html
+++ b/src/volcans.html
@@ -45,11 +45,7 @@
             >
           </li>
           <li>
-            <a
-              class="colored-background-link"
-              href="index.html#interes-turistic"
-              >Interès turístic</a
-            >
+            <a class="colored-background-link" href="links.html">Enllaços</a>
           </li>
         </ul>
       </nav>
@@ -76,7 +72,9 @@
               >
             </li>
             <li>
-              <a class="text-link" href="">Castellfollit de la Roca</a>
+              <a class="text-link" href="castellfollit.html"
+                >Castellfollit de la Roca</a
+              >
             </li>
             <li>
               <a class="text-link" href="">Volcà Croscat</a>
@@ -114,7 +112,7 @@
               </a>
             </figure>
             <figure class="img-galeria__figure">
-              <a class="img-galeria__link" href="">
+              <a class="img-galeria__link" href="castellfollit.html">
                 <img
                   src="https://images.gestionaweb.cat/2119/imgf-1200-630/castellfollit-de-la-roca-apartamentosbanyoles-1218723.jpg"
                   alt="Castellfollit de la Roca"
