--- a/src/castellfollit.html
+++ b/src/castellfollit.html
@@ -11,13 +11,19 @@
         Eines HTML i CSS del màster Desenvolupament de Llocs i Aplicacions Web de la UOC. 
         S'hi troba informació sobre el Parc Natural de la Zona Volcànica de la Garrotxa."
     />
-    <link rel="stylesheet" type="text/css" href="./styles.css" />
+    <link rel="stylesheet" type="text/css" href="./css/styles.css" />
     <!-- do not remove this line! -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap"
       rel="stylesheet"
+    />
+    <link
+      rel="icon"
+      type="image/svg"
+      sizes="32x32"
+      href="./img/volcano-solid.svg"
     />
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
@@ -53,8 +59,9 @@
     <main class="main">
       <div>
         <h3 class="secondary-header__title">
-          <span class="fa-solid fa-star"></span>
-          Llista de llocs d'interès
+          <a class="title-link" href="volcans.html"
+            ><span class="fa-solid fa-star"></span> Llista de llocs d'interès</a
+          >
         </h3>
         <ul class="categoria-volcans">
           <li>
