--- a/src/historia.html
+++ b/src/historia.html
@@ -11,13 +11,19 @@
         Eines HTML i CSS del màster Desenvolupament de Llocs i Aplicacions Web de la UOC. 
         S'hi troba informació sobre el Parc Natural de la Zona Volcànica de la Garrotxa."
     />
-    <link rel="stylesheet" type="text/css" href="./styles.css" />
+    <link rel="stylesheet" type="text/css" href="./css/styles.css" />
     <!-- do not remove this line! -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap"
       rel="stylesheet"
+    />
+    <link
+      rel="icon"
+      type="image/svg"
+      sizes="32x32"
+      href="./img/volcano-solid.svg"
     />
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
