--- a/src/links.html
+++ b/src/links.html
@@ -71,7 +71,9 @@
       <article>
         <section>
           <div>
-            <h3 class="secondary-header__title">Fonts d'informació</h3>
+            <h3 class="secondary-header__title">
+              <span class="fa-solid fa-link"></span> Fonts d'informació
+            </h3>
             <ul class="categoria-volcans">
               <li>
                 Parc Natural de la Zona Volcànica de la Garrotxa
@@ -168,7 +170,9 @@
             </ul>
           </div>
           <div>
-            <h3 class="secondary-header__title">Fonts d'imatge i vídeo</h3>
+            <h3 class="secondary-header__title">
+              <span class="fa-solid fa-link"></span> Fonts d'imatge i vídeo
+            </h3>
             <p>
               Totes aquestes fonts ja es troben citades a la mateixa pàgina on
               es troben, però aquí se'n fa una recopilació:
