--- a/src/castellfollit.html
+++ b/src/castellfollit.html
@@ -176,8 +176,8 @@
             YouTube:
             <a
               class="text-link"
-              href="https://www.youtube.com/@pmi94"
-              title="Canal YouTube N47"
+              href="https://www.youtube.com/@FlightsAirDroneTv"
+              title="Canal YouTube FlightsAirDroneTv"
               target="_blank"
               >N47</a
             >
