definitive edit canal youtube

--- a/src/castellfollit.html
+++ b/src/castellfollit.html
@@ -179,7 +179,7 @@
               href="https://www.youtube.com/@FlightsAirDroneTv"
               title="Canal YouTube FlightsAirDroneTv"
               target="_blank"
-              >N47</a
+              >FlightsAirDroneTv</a
             >
           </figcaption>
         </figure>
