--- a/src/historia.html
+++ b/src/historia.html
@@ -150,7 +150,8 @@
             <cite
               ><a
                 class="text-link"
-                href="https://ca.wikipedia.org/wiki/Zona_Volc%C3%A0nica_de_la_Garrotxa#cite_note-:0-5"
+                href="https://www.tdx.cat/handle/10803/284845#page=1"
+                target="_blank"
                 >Volcanic hazard assessment in monogenetic volcanic fields</a
               ></cite
             >
