added images and webp

--- a/src/castellfollit.html
+++ b/src/castellfollit.html
@@ -19,12 +19,7 @@
       href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap"
       rel="stylesheet"
     />
-    <link
-      rel="icon"
-      type="image/svg"
-      sizes="32x32"
-      href="./img/volcano-solid.svg"
-    />
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/volcano.png" />
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
     </style>
@@ -32,29 +27,12 @@
   </head>
   <body>
     <header class="primary-header">
+      <div class="logo"></div>
       <h1 class="primary-header__title">
         <a class="colored-background-link" href="index.html"
           >Parc Natural de la Zona Volcànica de la Garrotxa
-          <span class="fa-solid fa-volcano"> </span
-        ></a>
+        </a>
       </h1>
-      <nav>
-        <ul class="primary-nav list--no-style">
-          <li>
-            <a class="colored-background-link" href="historia.html"
-              >Història i formació</a
-            >
-          </li>
-          <li>
-            <a class="colored-background-link" href="volcans.html"
-              ><strong>Volcans i llocs d'interès</strong></a
-            >
-          </li>
-          <li>
-            <a class="colored-background-link" href="links.html">Enllaços</a>
-          </li>
-        </ul>
-      </nav>
     </header>
     <main class="main">
       <div>
@@ -84,6 +62,7 @@
             <a class="text-link" href="">La Fageda d'en Jordà</a>
           </li>
         </ul>
+        <div class="decorative-img castellfollit"></div>
       </div>
       <article>
         <header class="secondary-header">
@@ -94,11 +73,36 @@
         </header>
         <section>
           <figure class="img-figures">
-            <img
-              src="https://es.turismegarrotxa.com/img-municipi-3200-1800/castellfollit-segittur_001.jpg"
-              alt="Volcà Santa Margarida"
-              class="img-figures__image"
-            />
+            <picture
+              ><source
+                type="image/webp"
+                media="(max-width: 500px)"
+                srcset="./img/castellfollit-500px-cropped.webp" />
+              <source
+                type="image/webp"
+                media="(max-width: 839px)"
+                srcset="./img/castellfollit-800px.webp" />
+              <source
+                type="image/webp"
+                media="(min-width: 840px)"
+                srcset="./img/castellfollit-1200px.webp" />
+              <source
+                type="image/jpeg"
+                media="(max-width: 500px)"
+                srcset="./img/castellfollit-500px-cropped.jpg" />
+              <source
+                type="image/jpeg"
+                media="(max-width: 839px)"
+                srcset="./img/castellfollit-800px.jpg" />
+              <source
+                type="image/jpeg"
+                media="(max-width: 840px)"
+                srcset="./img/castellfollit-1200px.jpg" />
+              <img
+                class="img-figures__image"
+                src="./img/castellfollit-1200px.jpg"
+                alt="Castellfollit de la Roca"
+            /></picture>
             <figcaption class="img-figures__captions">
               Imatge del poble i la cinglera de Castellfollit des de l'aire |
               Imatge de:
@@ -160,6 +164,49 @@
             Imatges aèries
           </h3>
         </header>
+        <figure class="img-figures">
+          <picture
+            ><source
+              type="image/webp"
+              media="(max-width: 500px)"
+              srcset="./img/castellfollit2-500px.webp" />
+            <source
+              type="image/webp"
+              media="(max-width: 839px)"
+              srcset="./img/castellfollit2-800px.webp" />
+            <source
+              type="image/webp"
+              media="(min-width: 840px)"
+              srcset="./img/castellfollit2-1200px.webp" />
+            <source
+              type="image/jpeg"
+              media="(max-width: 500px)"
+              srcset="./img/castellfollit2-500px.jpg" />
+            <source
+              type="image/jpeg"
+              media="(max-width: 839px)"
+              srcset="./img/castellfollit2-800px.jpg" />
+            <source
+              type="image/jpeg"
+              media="(max-width: 840px)"
+              srcset="./img/castellfollit2-1200px.jpg" />
+            <img
+              class="img-figures__image"
+              src="./img/castellfollit2-1200px.jpg"
+              alt="Castellfollit de la Roca"
+          /></picture>
+          <figcaption class="img-figures__captions">
+            Imatge del poble i la cinglera de Castellfollit des del riu | Imatge
+            de:
+            <a
+              class="text-link"
+              href="https://ca.turismegarrotxa.com/municipi/castellfollit-de-la-roca/"
+              title="Castellfollit de la Roca"
+              target="_blank"
+              >Turisme Garrotxa</a
+            >
+          </figcaption>
+        </figure>
         <figure class="vid-figures">
           <iframe
             class="vid-figures__vid"
@@ -172,8 +219,8 @@
             allowfullscreen
           ></iframe>
           <figcaption class="vid-figures__caption">
-            Vídeo del Volcà Santa Margarida des de l'aire | Vídeo del canal de
-            YouTube:
+            Vídeo de la cinglera de Castellfollit des de l'aire | Vídeo del
+            canal de YouTube:
             <a
               class="text-link"
               href="https://www.youtube.com/@FlightsAirDroneTv"
@@ -186,12 +233,46 @@
       </article>
     </main>
     <footer class="footer">
-      <div class="footer__font">
-        <p>
-          Elaborat per Oriol Esquena Calm per a la PAC1 de l'assignatura Eines
-          HTML i CSS del màster de Desenvolupament de Llocs i Aplicacions Web de
-          la Universitat Oberta de Catalunya.
-        </p>
+      <div class="footer--logo"></div>
+      <nav class="footer--nav">
+        <ul class="footer--nav-menu list--no-style">
+          <li>
+            <a class="colored-background-link" href="index.html">Portada</a>
+          </li>
+          <li>
+            <a class="colored-background-link" href="historia.html"
+              >Història i formació</a
+            >
+          </li>
+          <li>
+            <a class="colored-background-link" href="volcans.html"
+              ><strong>Volcans i llocs d'interès</strong></a
+            >
+          </li>
+          <li>
+            <a class="colored-background-link" href="links.html">Enllaços</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="footer--xarxes-socials">
+        <a
+          class="colored-background-link"
+          href="https://instagram.com/pnzvg"
+          target="_blank"
+          ><span class="fa-brands fa-instagram"></span
+        ></a>
+        <a
+          class="colored-background-link"
+          href="https://twitter.com/pnzvg"
+          target="_blank"
+          ><span class="fa-brands fa-twitter"></span
+        ></a>
+        <a
+          class="colored-background-link"
+          href="https://facebook.com/pnzvg"
+          target="_blank"
+          ><span class="fa-brands fa-facebook"></span
+        ></a>
       </div>
     </footer>
     <!-- script type="module" src="./app.js"></!-->
