--- a/src/historia.html
+++ b/src/historia.html
@@ -19,12 +19,7 @@
       href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap"
       rel="stylesheet"
     />
-    <link
-      rel="icon"
-      type="image/svg"
-      sizes="32x32"
-      href="./img/volcano-solid.svg"
-    />
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/volcano.png" />
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
     </style>
@@ -32,29 +27,12 @@
   </head>
   <body>
     <header class="primary-header">
+      <div class="logo"></div>
       <h1 class="primary-header__title">
         <a class="colored-background-link" href="index.html"
           >Parc Natural de la Zona Volcànica de la Garrotxa
-          <span class="fa-solid fa-volcano"> </span
-        ></a>
+        </a>
       </h1>
-      <nav>
-        <ul class="primary-nav list--no-style">
-          <li>
-            <a class="colored-background-link" href="historia.html"
-              ><strong>Història i formació</strong></a
-            >
-          </li>
-          <li>
-            <a class="colored-background-link" href="volcans.html"
-              >Volcans i llocs d'interès</a
-            >
-          </li>
-          <li>
-            <a class="colored-background-link" href="links.html">Enllaços</a>
-          </li>
-        </ul>
-      </nav>
     </header>
     <main class="main">
       <article>
@@ -186,12 +164,46 @@
       </article>
     </main>
     <footer class="footer">
-      <div class="footer__font">
-        <p>
-          Elaborat per Oriol Esquena Calm per a la PAC1 de l'assignatura Eines
-          HTML i CSS del màster de Desenvolupament de Llocs i Aplicacions Web de
-          la Universitat Oberta de Catalunya.
-        </p>
+      <div class="footer--logo"></div>
+      <nav class="footer--nav">
+        <ul class="footer--nav-menu list--no-style">
+          <li>
+            <a class="colored-background-link" href="index.html">Portada</a>
+          </li>
+          <li>
+            <a class="colored-background-link" href="historia.html"
+              ><strong>Història i formació</strong></a
+            >
+          </li>
+          <li>
+            <a class="colored-background-link" href="volcans.html"
+              >Volcans i llocs d'interès</a
+            >
+          </li>
+          <li>
+            <a class="colored-background-link" href="links.html">Enllaços</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="footer--xarxes-socials">
+        <a
+          class="colored-background-link"
+          href="https://instagram.com/pnzvg"
+          target="_blank"
+          ><span class="fa-brands fa-instagram"></span
+        ></a>
+        <a
+          class="colored-background-link"
+          href="https://twitter.com/pnzvg"
+          target="_blank"
+          ><span class="fa-brands fa-twitter"></span
+        ></a>
+        <a
+          class="colored-background-link"
+          href="https://facebook.com/pnzvg"
+          target="_blank"
+          ><span class="fa-brands fa-facebook"></span
+        ></a>
       </div>
     </footer>
     <!-- script type="module" src="./app.js"></!-->
