--- a/src/index.html
+++ b/src/index.html
@@ -19,12 +19,7 @@
       href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap"
       rel="stylesheet"
     />
-    <link
-      rel="icon"
-      type="image/svg"
-      sizes="32x32"
-      href="./img/volcano-solid.svg"
-    />
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/volcano.png" />
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
     </style>
@@ -32,29 +27,12 @@
   </head>
   <body>
     <header class="primary-header">
+      <div class="logo"></div>
       <h1 class="primary-header__title">
         <a class="colored-background-link" href="index.html"
           >Parc Natural de la Zona Volcànica de la Garrotxa
-          <span class="fa-solid fa-volcano"> </span
-        ></a>
+        </a>
       </h1>
-      <nav>
-        <ul class="primary-nav list--no-style">
-          <li>
-            <a class="colored-background-link" href="historia.html"
-              >Història i formació</a
-            >
-          </li>
-          <li>
-            <a class="colored-background-link" href="volcans.html"
-              >Volcans i llocs d'interès</a
-            >
-          </li>
-          <li>
-            <a class="colored-background-link" href="links.html">Enllaços</a>
-          </li>
-        </ul>
-      </nav>
     </header>
     <main class="main">
       <article>
@@ -92,31 +70,92 @@
           </p>
         </section>
         <figure class="img-figures">
-          <img
-            src="https://es.turismegarrotxa.com/img-apartat-3200-1800/volca-santa-margarida-1-1920_001.jpg"
-            alt="Volcà Santa Margarida"
-            class="img-figures__image"
-          />
+          <picture
+            ><source
+              type="image/webp"
+              media="(max-width: 440px)"
+              srcset="./img/croscat-400px.webp" />
+            <source
+              type="image/webp"
+              media="(max-width: 839px)"
+              srcset="./img/croscat-800px.webp" />
+            <source
+              type="image/webp"
+              media="(min-width: 840px)"
+              srcset="./img/croscat-1200px.webp" />
+            <source
+              type="image/jpeg"
+              media="(max-width: 440px)"
+              srcset="./img/croscat-400px.jpg" />
+            <source
+              type="image/jpeg"
+              media="(max-width: 839px)"
+              srcset="./img/croscat-800px.jpg" />
+            <source
+              type="image/jpeg"
+              media="(max-width: 840px)"
+              srcset="./img/croscat-1200px.jpg" />
+            <img
+              class="img-figures__image--clipped"
+              src="./img/croscat-1200px.jpg"
+              alt="El Volcà Croscat"
+          /></picture>
           <figcaption class="img-figures__captions">
-            Imatge del volcà Santa Margarida des de l'aire | Imatge de:
+            El volcà Croscat en forma de volcà | Imatge de:
             <a
               class="text-link"
-              href="https://ca.turismegarrotxa.com/27-indrets-d-interes-de-la-garrotxa/volca-de-santa-margarida/"
-              title="Reserva Natural del Volcà de Santa Margarida"
+              href="https://www.catalunyapress.es/texto-diario/mostrar/3167646/pueden-erupcionar-volcanes-garrotxa"
+              title="Reserva Natural del Volcà Croscat"
               target="_blank"
-              >Turisme Garrotxa</a
+              >Catalunya Press</a
             >
           </figcaption>
         </figure>
       </article>
     </main>
     <footer class="footer">
-      <div class="footer__font">
-        <p>
-          Elaborat per Oriol Esquena Calm per a la PAC1 de l'assignatura Eines
-          HTML i CSS del màster de Desenvolupament de Llocs i Aplicacions Web de
-          la Universitat Oberta de Catalunya.
-        </p>
+      <div class="footer--logo"></div>
+      <nav class="footer--nav">
+        <ul class="footer--nav-menu list--no-style">
+          <li>
+            <a class="colored-background-link" href="index.html"
+              ><strong>Portada</strong></a
+            >
+          </li>
+          <li>
+            <a class="colored-background-link" href="historia.html"
+              >Història i formació</a
+            >
+          </li>
+          <li>
+            <a class="colored-background-link" href="volcans.html"
+              >Volcans i llocs d'interès</a
+            >
+          </li>
+          <li>
+            <a class="colored-background-link" href="links.html">Enllaços</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="footer--xarxes-socials">
+        <a
+          class="colored-background-link"
+          href="https://instagram.com/pnzvg"
+          target="_blank"
+          ><span class="fa-brands fa-instagram"></span
+        ></a>
+        <a
+          class="colored-background-link"
+          href="https://twitter.com/pnzvg"
+          target="_blank"
+          ><span class="fa-brands fa-twitter"></span
+        ></a>
+        <a
+          class="colored-background-link"
+          href="https://facebook.com/pnzvg"
+          target="_blank"
+          ><span class="fa-brands fa-facebook"></span
+        ></a>
       </div>
     </footer>
     <!-- script type="module" src="./app.js"></!-->
